<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent">

    <com.eyalbira.loadingdots.LoadingDots
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pb_dot_onboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:LoadingDots_auto_play="true"
        app:LoadingDots_dots_color="@color/colorSecondaryAccent"
        app:LoadingDots_dots_count="5"
        app:LoadingDots_dots_size="13dp"
        app:LoadingDots_dots_space="5dp"
        app:LoadingDots_jump_duration="200"
        app:LoadingDots_jump_height="4dp"
        app:LoadingDots_loop_duration="800"
        app:LoadingDots_loop_start_delay="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_onboarding_layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_onboarding_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ll_onboarding_layouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <android.support.design.widget.TabLayout
            android:id="@+id/tl_dots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/dot_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <Button
            android:id="@+id/btn_login_onboard"
            style="@style/ActionButtons"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="48dp"
            android:text="@string/login_btn"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_message"
            app:layout_constraintEnd_toStartOf="@+id/ll_onboarding_layouts"
            app:layout_constraintStart_toEndOf="@+id/ll_onboarding_layouts" />

        <LinearLayout
            android:id="@+id/ll_bottom_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/bottom_message_one"
                android:textColor="@color/colorDarkPrimary"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/bottom_message_two"
                android:textColor="@color/colorSecondaryAccent"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>